<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
  <string name="app_name">Droidboy</string>
  <string name="feed">News Feed</string>
  <string name="inappmessage">In-App Messages</string>
  <string name="settings">Settings</string>
  <string name="network_control_title">Network Controls</string>
  <string name="session_title">Sessions</string>
  <string name="location_title">Location</string>
  <string name="about_title">About</string>
  <string name="sdk_state_change_settings_title">Braze SDK State Change</string>
  <string name="sdk_auth">SDK Auth</string>
  <string name="user_dialog_title">Default Attributes</string>
  <string name="user_dialog_okay">OK</string>
  <string name="user_dialog_cancel">Cancel</string>
  <string name="user_dialog_close">Close</string>
  <string name="user_dialog_first_name">First Name</string>
  <string name="user_dialog_last_name">Last Name</string>
  <string name="user_dialog_email_address">Email Address</string>
  <string name="user_dialog_gender">Gender:</string>
  <string name="user_dialog_language">Language</string>
  <string name="user_dialog_flush">Flush on close</string>
  <string name="user_dialog_populate">Populate</string>
  <string name="user_dialog_clear">Clear All</string>
  <string name="user_dialog_birthday_button">Pick Birthday</string>
  <string name="user_dialog_done">done</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="other">Other</string>
  <string name="unknown">Unknown</string>
  <string name="not_applicable">Not Applicable</string>
  <string name="prefer_not_to_say">Prefer not to Say</string>
  <string name="unspecified">Unspecified</string>
  <string name="subscribed">Subscribed</string>
  <string name="opted_in">Opted-In</string>
  <string name="unsubscribed">Unsubscribed</string>
  <string name="facebook_share_title">Facebook</string>
  <string name="facebook_share_summary">Share us on Facebook</string>
  <string name="facebook_share_toast">Thank you for sharing on Facebook</string>
  <string name="twitter_share_title">Twitter</string>
  <string name="twitter_share_summary">Share us on Twitter</string>
  <string name="twitter_share_toast">Thank you for sharing on Twitter</string>
  <string name="custom_logging_dialog_title">Custom Logging</string>
  <string name="custom_logging_dialog_summary">Log User Attributes, Custom Events, and Purchases</string>
  <string name="custom_logging_dialog_okay">OK</string>
  <string name="custom_logging_dialog_cancel">Cancel</string>
  <string name="custom_logging_category_title">Custom Logging</string>
  <string name="log_user_attributes_title">Custom Attributes</string>
  <string name="log_events_title">Custom Events</string>
  <string name="log_purchase_title">Purchases</string>
  <string name="storage_info_preference_category">Storage Info</string>
  <string name="file_data_title">File Data</string>
  <string name="file_data_summary">View the files stored for this app.</string>
  <string name="shared_preferences_title">SharedPreferences Data</string>
  <string name="shared_preferences_summary">View the SharedPreferences data for this app.</string>
  <string name="attribute_array">Array Operation:</string>
  <string name="attribute_array_set">Set</string>
  <string name="attribute_array_add">Add</string>
  <string name="attribute_array_remove">Remove</string>
  <string name="attribute_array_key">Create Attribute Array</string>
  <string name="custom_logging_user_attribute">User Attribute</string>
  <string name="custom_logging_user_number_attribute">User Attribute (Number)</string>
  <string name="custom_logging_user_attribute_increment">Increment Attribute</string>
  <string name="custom_logging_user_attribute_unset">Unset Attribute</string>
  <string name="custom_logging_custom_purchase_qty">Purchase Quantity</string>
  <string name="custom_logging_custom_purchase_currency_code">Currency Code</string>
  <string name="custom_logging_custom_purchase_price_code">Price</string>
  <string name="data_flush_title">Request Flush</string>
  <string name="data_flush_toast">Data flush requested</string>
  <string name="close_session_toast">Closed existing Braze session.</string>
  <string name="enabled_outbound_network_requests_toast">Enabled Braze outbound network requests</string>
  <string name="disabled_outbound_network_requests_toast">Disabled Braze outbound network requests</string>
  <string name="spinner_content_description">Spinner</string>
  <string name="spin">Spin!</string>
  <string name="red">Red</string>
  <string name="blue">Blue</string>
  <string name="inappmessage_tester_tab_title">IAMs</string>
  <string name="create_and_add_inappmessage">Create and Add In-App Message</string>
  <string name="display_next_inappmessage">Display Next In-App Message</string>
  <string name="hide_current_inappmessage">Hide Current In-App Message</string>
  <string name="custom_iappboy_navigator">Custom IBrazeDeeplinkHandler</string>
  <string name="custom_iappboy_animation">Custom IInAppMessageAnimationFactory</string>
  <string name="custom_iinappmessagemanager_listener">Custom IInAppMessageManagerListener</string>
  <string name="custom_html_inappmessage_action_listener">Custom IHtmlInAppMessageActionListener</string>
  <string name="custom_inappmessage_modal_size">Custom Max Graphic Modal Size</string>
  <string name="custom_inappmessage_image_radius">Custom Image Radius (remove radius)</string>
  <string name="disable_back_button_dismiss_behavior">Disable back button IAM dismissal</string>
  <string name="enable_tap_outside_modal_dismiss_behavior">Enable tapping outside Modal to dismiss</string>
  <string name="inappmessage_activity">In-App Messages</string>
  <string name="custom_iinappmessage_view_factory">Custom IInAppMessageViewFactory</string>
  <string name="push_testing">Push</string>
  <string name="set_header_align">Set header align</string>
  <string name="set_message_align">Set message align</string>
  <string name="set_background_color">Set background color</string>
  <string name="set_icon_color">Set icon color</string>
  <string name="set_icon_background_color">Set icon background color</string>
  <string name="set_close_button_color">Set close button color</string>
  <string name="set_text_color">Set text color</string>
  <string name="set_header_text_color">Set header text color</string>
  <string name="set_button_color">Set button color</string>
  <string name="set_button_border_color">Set button border color</string>
  <string name="set_button_text_color">Set button text color</string>
  <string name="set_animate_in">Set animate in</string>
  <string name="set_animate_out">Set animate out</string>
  <string name="set_open_uri_in_webview">Open Web Links In WebView</string>
  <string name="story_toggle_deep_link">Toggle Story Deep Link</string>
  <string name="story_toggle_title">Toggle Story Title</string>
  <string name="story_toggle_subtitle">Toggle Story Subtitle</string>
  <string name="set_html_push_text">Test HTML Push</string>
  <string name="header_10">Hey there#</string>
  <string name="header_20">Hey hey from Braze!#</string>
  <string name="header_30">Good morning from us @ Braze!#</string>
  <string name="header_80">Hello from Braze!! Have a fun day okay. Hello from Braze!! Have a fun day today#</string>
  <string name="message_20">Hey hey from Braze!#</string>
  <string name="message_40">Hello there!  This is an in-app message#</string>
  <string name="message_70">Hello there! This is an in-app message. Yo, this is an in-app message#</string>
  <string name="message_90">Hello there! This is an in-app message.  Hello again!  Anyways, this is an in-app message#</string>
  <string name="message_140">Welcome to Braze!!! Braze is Marketing Automation for Apps. This is an in-app message - this message is exactly one hundred and forty chars#</string>
  <string name="message_240">Welcome to Braze!!! Braze is Marketing Automation for Apps. This is an in-app message - this message is exactly two hundred and forty chars!  We don\'t recommend making in-app messages longer than 140 characters due to variations in screens#</string>
  <string name="message_640">Welcome to Braze!!! Braze is Marketing Automation for Apps. This is an in-app message - this message is exactly six hundred and forty chars!  We don\'t recommend making in-app messages longer than 140 characters due to variations in screens.  This is an in-app message - this message is exactly six hundred and forty chars!  We don\'t recommend making in-app messages longer than 140 characters due to variations in screens.  This is an in-app message - this message is exactly six hundred and forty chars!  We don\'t recommend making in-app messages longer than 140 characters due to variations in screens.  This is a waaaay too long message#</string>
  <string name="misc_preference_category">Misc</string>
  <string name="image_loading_preference_category">Image Display</string>
  <string name="content_card_preference_category">Content Cards</string>
  <string name="set_email_subscription_state_title">Set Email Subscription State</string>
  <string name="set_push_subscription_state_title">Set Push Subscription State</string>
  <string name="sort_feed">Sort News Feed</string>
  <string name="min_trigger_interval">Trigger Action Minimum Time Interval (s)</string>
  <string name="custom_news_feed_card_click_action_listener">Custom INewsFeedClickActionListener</string>
  <string name="log_attribution_title">Log Attribution For User</string>
  <string name="log_attribution_summary">Log Creative, AdGroup, Network, and Campaign.</string>
  <string name="sort_feed_summary">Sort the News Feed Cards to Prefer to Display Unread Cards</string>
  <string name="custom_news_feed_card_click_action_listener_summary">toggles the use of CustomNewsFeedClickActionListener</string>
  <string name="notch_settings_category">Notch Settings</string>
  <string name="set_environment_title">Set Environment</string>
  <string name="set_environment_override_api_key_alias_hint">API Key Description (empty sets default)</string>
  <string name="set_environment_override_api_key_hint">API Key (empty sets default)</string>
  <string name="set_environment_override_endpoint_url_hint">Endpoint (empty sets default)</string>
  <string name="set_environment_override_api_key_description">Set API Key:</string>
  <string name="set_environment_override_prev_api_key_description">Previously Used API Keys:</string>
  <string name="set_environment_override_endpoint_description">Set Endpoint:</string>
  <string name="environment_preference_category">Environment</string>
</resources>