<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:ignore="RtlHardcoded">
  <LinearLayout
    android:id="@+id/inappmessage_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">
    <Button
      android:id="@+id/create_and_add_inappmessage_button"
      style="@style/BaseWidget.InAppMessageTesterButton"
      android:text="@string/create_and_add_inappmessage" />
    <Button
      android:id="@+id/display_next_inappmessage_button"
      style="@style/BaseWidget.InAppMessageTesterButton"
      android:text="@string/display_next_inappmessage" />
    <Button
      android:id="@+id/hide_current_inappmessage_button"
      style="@style/BaseWidget.InAppMessageTesterButton"
      android:text="@string/hide_current_inappmessage" />
  </LinearLayout>
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/inappmessage_buttons"
    android:layout_alignParentTop="true"
    android:fillViewport="true">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="10dp"
      android:orientation="vertical">
      <Spinner
        android:id="@+id/inapp_set_message_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_click_action_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_dismiss_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_slide_from_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_uri_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_icon_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_image_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_button_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_message_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_header_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_frame_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/inapp_orientation_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:stretchColumns="1">
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            android:text="@string/set_open_uri_in_webview"
            style="@style/BaseWidget.InAppMessageTesterTextView"/>
          <Spinner
            android:id="@+id/inapp_open_uri_in_webview_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_background_color" />
          <Spinner
            android:id="@+id/inapp_background_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_icon_color" />
          <Spinner
            android:id="@+id/inapp_icon_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_icon_background_color" />
          <Spinner
            android:id="@+id/inapp_icon_background_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_close_button_color" />
          <Spinner
            android:id="@+id/inapp_close_button_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_text_color" />
          <Spinner
            android:id="@+id/inapp_text_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_header_text_color" />
          <Spinner
            android:id="@+id/inapp_header_text_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_button_color" />
          <Spinner
            android:id="@+id/inapp_button_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_button_border_color" />
          <Spinner
            android:id="@+id/inapp_button_border_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_header_align" />
          <Spinner
            android:id="@+id/inapp_header_align_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_message_align" />
          <Spinner
            android:id="@+id/inapp_message_align_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_button_text_color" />
          <Spinner
            android:id="@+id/inapp_button_text_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_animate_in" />
          <Spinner
            android:id="@+id/inapp_animate_in_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            style="@style/BaseWidget.InAppMessageTesterTextView"
            android:text="@string/set_animate_out" />
          <Spinner
            android:id="@+id/inapp_animate_out_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
      </TableLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <CheckBox
          android:id="@+id/custom_inappmessage_view_factory_checkbox"
          style="@style/BaseWidget.InAppMessageTesterCheckBox"
          android:text="@string/custom_iinappmessage_view_factory" />
        <CheckBox
          android:id="@+id/custom_inappmessage_manager_listener_checkbox"
          style="@style/BaseWidget.InAppMessageTesterCheckBox"
          android:text="@string/custom_iinappmessagemanager_listener" />
        <CheckBox
          android:id="@+id/custom_appboy_navigator_checkbox"
          style="@style/BaseWidget.InAppMessageTesterCheckBox"
          android:text="@string/custom_iappboy_navigator" />
        <CheckBox
          android:id="@+id/custom_appboy_animation_checkbox"
          style="@style/BaseWidget.InAppMessageTesterCheckBox"
          android:text="@string/custom_iappboy_animation" />
        <CheckBox
          android:id="@+id/custom_appboy_html_inappmessage_action_listener_checkbox"
          style="@style/BaseWidget.InAppMessageTesterCheckBox"
          android:text="@string/custom_html_inappmessage_action_listener" />
        <CheckBox
          android:id="@+id/custom_appboy_graphic_modal_max_size_checkbox"
          style="@style/BaseWidget.InAppMessageTesterCheckBox"
          android:text="@string/custom_inappmessage_modal_size" />
        <CheckBox
          android:id="@+id/custom_appboy_image_radius_checkbox"
          style="@style/BaseWidget.InAppMessageTesterCheckBox"
          android:text="@string/custom_inappmessage_image_radius" />
        <CheckBox
          android:id="@+id/disable_back_button_dismiss_behavior"
          style="@style/BaseWidget.InAppMessageTesterCheckBox"
          android:text="@string/disable_back_button_dismiss_behavior" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</RelativeLayout>
